MonetDB5/src/mal/Tests/tst105a.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB
# dbname:demo
## check classification of functions in the proper module
#
#module bat;
#command new(h:any::1,t:any::2):bat[any::1,any::2]= GDKbatnew;
#
#b:= bat.new(:str,:int);
!ERROR: command new(h:any::1,t:any::2):bat[any::1,any::2]= GDKbatnew;
!                        ^',' expected
command Admin.new(h:any):any;	# 0  unknown (new:any)<-(h:any)
    b := bat.new(str:,int:);	# 1  unknown (b:any)<-($3:str)($4:int)
end new;	# 2  unknown 
>